fix: private key must be ed25519
Signed-off-by: Dario Tranchitella <dario@tranchitella.eu>

--- a/deploy/00-secret.yaml
+++ b/deploy/00-secret.yaml
@@ -7,10 +7,10 @@ type: Opaque
 data:
   # Talos Machine CA Certificate (base64 from talosctl gen config)
   # Copy from controlplane.yaml -> machine.ca.crt
-  ca.crt: ""
+  tls.crt: ""
   # Talos Machine CA Private Key (base64 from talosctl gen config)
   # Copy from controlplane.yaml -> machine.ca.key
-  ca.key: ""
+  tls.key: ""
   # Talos bootstrap token (from worker config -> cluster.token)
   # Example: u1auey.78f6fcj1pzoaur2i
   token: ""
