--- a/deploy/01-issuer.yaml
+++ b/deploy/01-issuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: ${CLUSTER_NAME}-talos-ca
-  namespace: default
+  namespace: $NAMESPACE
 spec:
   ca:
     secretName: ${CLUSTER_NAME}-talos-ca  # 00-secret.yaml
