update docs to latest changes
Signed-off-by: Dario Tranchitella <dario@tranchitella.eu>

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -13,5 +13,6 @@ export TALOS_VERSION="v1.8.3"
 # Add or remove IPs as needed
 export WORKER_IPS="192.168.11.101 192.168.11.102 192.168.11.103"
 
-# Optional: Docker registry for CSR Signer image
-# export CSR_SIGNER_IMAGE="docker.io/bsctl/talos-csr-signer:latest"
+# Optional: Registry for CSR Signer image
+export CSR_SIGNER_IMAGE="ghcr.io/clastix/talos-csr-signer"
+export CSR_SIGNER_IMAGE_TAG="latest"
